# KProdigy

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
kprodigy/: __init__.py  kprodigy.py
tests/: __init__.py  test_basic.py  test_performance.py
