[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kprodigy"
version = "0.3.1"
description = "Enhanced Prodigy optimizer with 40% speedup, automatic multi-component support, and simplified architecture"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["deep-learning", "pytorch", "optimizer", "machine-learning"]
authors = [
    {name = "Koronos"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Koronos/KProdigy"
Repository = "https://github.com/Koronos/KProdigy"

